fix icon overlap, render playlistid (video-list-v2)

--- a/video-list/v2/index.css
+++ b/video-list/v2/index.css
@@ -191,7 +191,6 @@ a:hover {
     content: "⚙️";
     right: 0;
     top: 0;
-    z-index: 10;
 }
 
 @media only screen and (max-width : 1040px) {
